--- a/index.html
+++ b/index.html
@@ -3,63 +3,32 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Portfolio Fotograficzne</title>
+  <title>Start</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-
   <header>
     <nav>
       <div class="logo">Twoje Imię</div>
       <ul>
-        <li><a href="#home">Start</a></li>
-        <li><a href="#portfolio">Portfolio</a></li>
-        <li><a href="#about">O mnie</a></li>
-        <li><a href="#offer">Oferta</a></li>
-        <li><a href="#contact">Kontakt</a></li>
+        <li><a href="index.html">Start</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="about.html">O mnie</a></li>
+        <li><a href="offer.html">Oferta</a></li>
+        <li><a href="contact.html">Kontakt</a></li>
       </ul>
     </nav>
   </header>
 
-  <section id="home" class="hero">
+  <section class="hero">
     <h1>Fotografia Eventowa</h1>
     <p>Reportaże z imprez i niezapomniane chwile</p>
-    <a href="#portfolio" class="btn">Zobacz portfolio</a>
-  </section>
-
-  <section id="portfolio">
-    <h2>Moje zdjęcia</h2>
-    <div class="gallery">
-      <img src="images/photo1.jpg" alt="Zdjęcie 1">
-      <img src="images/photo2.jpg" alt="Zdjęcie 2">
-      <img src="images/photo3.jpg" alt="Zdjęcie 3">
-    </div>
-  </section>
-
-  <section id="about">
-    <h2>O mnie</h2>
-    <p>Jestem fotografką specjalizującą się w reportażach z imprez i wydarzeń. Uwielbiam łapać emocje i tworzyć opowieści obrazem.</p>
-  </section>
-
-  <section id="offer">
-    <h2>Oferta</h2>
-    <p>Oferuję pakiety dostosowane do potrzeb: mini reportaże, pełne dni, sesje portretowe na eventach. Skontaktuj się, by omówić szczegóły!</p>
-  </section>
-
-  <section id="contact">
-    <h2>Kontakt</h2>
-    <form>
-      <input type="text" placeholder="Twoje imię" required />
-      <input type="email" placeholder="Twój email" required />
-      <textarea placeholder="Wiadomość" required></textarea>
-      <button type="submit">Wyślij</button>
-    </form>
+    <a href="portfolio.html" class="btn">Zobacz portfolio</a>
   </section>
 
   <footer>
     <p>&copy; 2025 Twoje Imię</p>
   </footer>
-
   <script src="script.js"></script>
 </body>
 </html>
