--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </section>
 
   <footer>
-    <p>&copy; 2025 Twoje Imię</p>
+    <p>&copy; 2025 Lunar Wolf Photography</p>
   </footer>
   <script src="script.js"></script>
 </body>
