--- a/offer.html
+++ b/offer.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <nav>
-      <div class="logo">Twoje Imię</div>
+      <div class="logo">Lunar Wolf Photography</div>
       <ul>
         <li><a href="index.html">Start</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
@@ -26,7 +26,7 @@
   </section>
 
   <footer>
-    <p>&copy; 2025 Twoje Imię</p>
+    <p>&copy; 2025 Lunar Wolf Photography</p>
   </footer>
   <script src="script.js"></script>
 </body>
