--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <nav>
-      <div class="logo">Twoje Imię</div>
+      <div class="logo">Lunar Wolf Photography</div>
       <ul>
         <li><a href="index.html">Start</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
